Added GitHub open source link to html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
             </div>
             <hr />
             <div>
-              <a href="">Open-source code, by Lauren D'Alessio</a>
+              <a
+                href="https://github.com/LDalessio/SheCodes_Weather_App"
+                target="_blank"
+                >Open-source code</a
+              >, by Lauren D'Alessio
             </div>
           </div>
         </div>
