--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <span id="temperature-value"></span>
 
                 <span class="units">
-                  <a href="#" id="fahrenheit-link">°F</a> |
+                  <a href="#" id="fahrenheit-link" class="active">°F</a> |
                   <a href="#" id="celsius-link">°C</a>
                 </span>
               </div>
             </div>
             <div class="col-sm extraDetails">
-              <div class="currentWind">Wind: <span id="Wind"></span> mph</div>
+              <div class="currentWind">Wind: <span id="wind"></span> mph</div>
               <div class="currentHumidity">
                 Humidity: <span id="humidity"></span>%
               </div>
