Added weather icon

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
           </div>
           <div class="row">
             <div class="col-sm currentLocationTemp">
+              <img
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-night.png"
+                alt="Clear"
+                id="icon"
+              />
               <div class="enteredCityState" id="city"></div>
               <div class="currentTemp" id="current-temp">
                 <span id="temperature-value"></span>
